deploy/namespaces/llm-agent/istio/01-llm-agent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm-agent
  labels:
    istio.io/rev: default
